engine-net-2/examples/Errors/TypeMismatchCompiled.grg
#include "Rules.grg"

sequence s1
{
	{ add(E) }
}
